--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #11072F;
+  position: relative;
+  width: 1440px;
+  height: 1458px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.logo {
+  position: absolute;
+  width: 65px;
+  height: 73px;
+  left: 688px;
+  top: 57px;
 }
